--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "spatie/laravel-permission": "^2.9",
+        "staudenmeir/eloquent-has-many-deep": "1.7",
         "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
