--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     },
     "autoload": {
         "classmap": [
-            "database/factories"
+            "database/factories",
+            "database"
         ],
         "psr-4": {
             "App\\": "app/"
@@ -40,8 +41,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
