--- a/resources/frontend/.env.production
+++ b/resources/frontend/.env.production
@@ -1,2 +1,2 @@
-VUE_APP_API_URL=https://rapport-2-test.brunnereichhof.ch/api/
-VUE_APP_URL=https://rapport-2-test.brunnereichhof.ch/
+VUE_APP_API_URL=http://167.172.168.193/api/
+VUE_APP_URL=http://167.172.168.193/
