--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -11,10 +11,12 @@
     "@websanova/vue-auth": "^2.21.14-beta",
     "axios": "^0.19.0",
     "chart.js": "^2.7.3",
+    "chartist": "^0.11.4",
     "moment": "^2.24.0",
     "sass": "^1.23.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-chartist": "^2.2.1",
     "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^1.5.9",
