--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "jenssegers/agent": "^2.6",
     "laravel/framework": "5.6.*",
     "laravel/tinker": "^1.0",
+    "league/flysystem-aws-s3-v3": "^1.0",
     "maatwebsite/excel": "^3.1",
     "spatie/laravel-permission": "^2.9",
     "staudenmeir/eloquent-has-many-deep": "1.7",
