--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "php": "^7.1.3",
     "bensampo/laravel-enum": "^1.12",
     "codedge/laravel-fpdf": "^1.5",
+    "doctrine/dbal": "^2.10",
     "elibyy/tcpdf-laravel": "5.6",
     "fideloper/proxy": "^4.0",
     "intervention/image": "^2.4",
