--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -19,10 +19,10 @@
     "vue-axios": "^2.1.4",
     "vue-chartist": "^2.2.1",
     "vue-chartjs": "^3.4.0",
-    "vue-drag-it-dude": "^1.3.0",
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^1.5.9",
     "vue-touch": "^2.0.0-beta.4",
+    "vue2-touch-events": "^2.2.1",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.2.17",
     "vuex": "^3.0.1"
