--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -21,6 +21,7 @@
     "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^1.5.9",
+    "vue-sync": "^3.2.0",
     "vue-touch": "^2.0.0-beta.4",
     "vue2-touch-events": "^2.2.1",
     "vuelidate": "^0.7.4",
