--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "chart.js": "^2.7.3",
     "chartist": "^0.11.4",
+    "core-js": "^3.6.5",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "sass": "^1.23.1",
