--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^2.7.3",
     "chartist": "^0.11.4",
     "core-js": "^3.6.5",
+    "eslint-config-airbnb-base": "^14.1.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "sass": "^1.23.1",
