--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@websanova/vue-auth": "^2.21.14-beta",
+    "@websanova/vue-auth": "^3.1.2-beta",
     "axios": "^0.19.0",
     "chart.js": "^2.7.3",
     "chartist": "^0.11.4",
     "core-js": "^3.6.5",
     "eslint-config-airbnb-base": "^14.1.0",
+    "js-file-download": "^0.4.11",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "sass": "^1.23.1",
