--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -22,8 +22,9 @@
     "vue-axios": "^2.1.4",
     "vue-chartist": "^2.2.1",
     "vue-chartjs": "^3.4.0",
+    "vue-lodash": "^2.1.2",
     "vue-router": "^3.0.1",
-    "vue-sweetalert2": "^1.5.9",
+    "vue-sweetalert2": "^3.0.3",
     "vue-sync": "^3.2.0",
     "vue-touch": "^2.0.0-beta.4",
     "vue2-touch-events": "^2.2.1",
