extra dev bucket

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+AWS_URL=https://fra1.digitaloceanspaces.com
+AWS_ENDPOINT=https://fra1.digitaloceanspaces.com
+AWS_BUCKET=rapport-2-files-dev
+AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=
+AWS_DEFAULT_REGION=fra1
