--- a/composer.json
+++ b/composer.json
@@ -8,28 +8,27 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": "^7.1.3",
+    "php": "^7.4",
     "bensampo/laravel-enum": "^1.12",
-    "codedge/laravel-fpdf": "^1.5",
     "doctrine/dbal": "^2.10",
-    "elibyy/tcpdf-laravel": "5.6",
     "fideloper/proxy": "^4.0",
+    "fruitcake/laravel-cors": "^2.0",
+    "illuminate/database": "^7.13",
     "intervention/image": "^2.4",
     "jenssegers/agent": "^2.6",
-    "laravel/framework": "5.6.*",
-    "laravel/tinker": "^1.0",
+    "laravel/framework": "^7.0",
+    "laravel/tinker": "^2.0",
+    "laravel/ui": "^2.0",
     "league/flysystem-aws-s3-v3": "^1.0",
     "maatwebsite/excel": "^3.1",
-    "spatie/laravel-permission": "^2.9",
-    "staudenmeir/eloquent-has-many-deep": "1.7",
-    "tymon/jwt-auth": "^0.5.12"
+    "tymon/jwt-auth": "^1.0"
   },
   "require-dev": {
     "filp/whoops": "^2.0",
     "fzaninotto/faker": "^1.4",
     "mockery/mockery": "^1.0",
-    "nunomaduro/collision": "^2.0",
-    "phpunit/phpunit": "^7.0"
+    "nunomaduro/collision": "^4.1",
+    "phpunit/phpunit": "^8.5"
   },
   "autoload": {
     "classmap": [
