--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,12 @@
     "laravel/ui": "^2.0",
     "league/flysystem-aws-s3-v3": "^1.0",
     "maatwebsite/excel": "^3.1",
+    "setasign/fpdi": "^2.3",
+    "tecnickcom/tcpdf": "^6.3",
     "tymon/jwt-auth": "^1.0"
   },
   "require-dev": {
+    "barryvdh/laravel-ide-helper": "^2.7",
     "filp/whoops": "^2.0",
     "fzaninotto/faker": "^1.4",
     "mockery/mockery": "^1.0",
@@ -59,7 +62,11 @@
     "post-autoload-dump": [
       "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
       "@php artisan package:discover"
-    ]
+    ],
+    "post-update-cmd": [
+      "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+      "@php artisan ide-helper:generate"
+  ]
   },
   "config": {
     "preferred-install": "dist",
