--- a/.env.example
+++ b/.env.example
@@ -25,10 +25,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=brunnereichhof.ch
+MAIL_HOST=
 MAIL_PORT=25
-MAIL_USERNAME=rapport@brunnereichhof.ch
-MAIL_PASSWORD=Q6ro5o$6
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
