--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "intervention/image": "^2.4",
     "jenssegers/agent": "^2.6",
     "laravel/framework": "^7.0",
+    "laravel/helpers": "^1.2",
     "laravel/tinker": "^2.0",
     "laravel/ui": "^2.0",
     "league/flysystem-aws-s3-v3": "^1.0",
