--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -14,6 +14,7 @@
     "chartist": "^0.11.4",
     "core-js": "^3.6.5",
     "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-vuetify": "^1.0.0-beta.6",
     "js-file-download": "^0.4.11",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
