--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -9,14 +9,14 @@
   },
   "dependencies": {
     "@websanova/vue-auth": "^3.1.2-beta",
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "chart.js": "^2.7.3",
     "chartist": "^0.11.4",
     "core-js": "^3.6.5",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-vuetify": "^1.0.0-beta.6",
     "js-file-download": "^0.4.11",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "moment": "^2.24.0",
     "sass": "^1.23.1",
     "vue": "^2.6.10",
@@ -24,6 +24,7 @@
     "vue-chartist": "^2.2.1",
     "vue-chartjs": "^3.4.0",
     "vue-fragment": "^1.5.1",
+    "vue-i18n": "^8.22.4",
     "vue-lodash": "^2.1.2",
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^3.0.3",
