--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-vuetify": "^1.0.0-beta.6",
+    "flush-promises": "^1.0.2",
     "js-file-download": "^0.4.11",
     "lodash": "^4.17.20",
     "moment": "^2.24.0",
