--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -35,6 +35,7 @@
     "vue-touch": "^2.0.0-beta.4",
     "vue-virtual-scroll-list": "^2.2.1",
     "vue2-touch-events": "^2.2.1",
+    "vuedraggable": "^2.24.3",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.2.17",
     "vuex": "^3.0.1"
