Shift Laravel dependencies

--- a/composer.json
+++ b/composer.json
@@ -9,33 +9,35 @@
     "type": "project",
     "require": {
         "php": "^7.4",
-        "bensampo/laravel-enum": "^1.12",
-        "doctrine/dbal": "^2.10",
-        "fideloper/proxy": "^4.0",
+        "bensampo/laravel-enum": "^3.3",
+        "doctrine/dbal": "^3.0",
+        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "illuminate/database": "^7.13",
-        "intervention/image": "^2.4",
+        "intervention/image": "^2.5",
         "jenssegers/agent": "^2.6",
-        "laravel/framework": "^7.0",
-        "laravel/helpers": "^1.2",
-        "laravel/telescope": "^3.5",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
+        "laravel/framework": "^8.33",
+        "laravel/helpers": "^1.4",
+        "laravel/telescope": "^4.4",
+        "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.2",
         "league/flysystem-aws-s3-v3": "^1.0",
         "maatwebsite/excel": "^3.1",
         "setasign/fpdi": "^2.3",
         "spatie/laravel-activitylog": "^3.17",
         "tecnickcom/tcpdf": "^6.3",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "guzzlehttp/guzzle": "^7.0.1"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.7",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "laravel/dusk": "^6.11",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "barryvdh/laravel-ide-helper": "^2.9",
+        "filp/whoops": "^2.11",
+        "laravel/dusk": "^6.13",
+        "mockery/mockery": "^1.4.2",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3.3",
+        "fakerphp/faker": "^1.9.1",
+        "facade/ignition": "^2.5"
     },
     "autoload": {
         "classmap": [
