--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "serve": "cd resources/frontend && npm run serve",
-    "build": "cd resources/frontend && npm run build --prod && rm -f ../../public/*.js RR rm -f ../../public/*.css && cp dist/index.html ../views/index.html && cp -r dist/* ../../public/"
-  },
-  "devDependencies": {
-    "axios": "^0.21.1",
-    "bootstrap": "^4.3.1",
-    "cross-env": "^5.1",
-    "jquery": "^3.4.1",
-    "laravel-mix": "^2.0",
-    "lodash": "^4.17.15",
-    "popper.js": "^1.12",
-    "vue": "^2.5.7"
-  },
-  "dependencies": {
-    "concurrently": "^4.1.2"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production",
+        "serve": "cd resources/frontend && npm run serve",
+        "build": "cd resources/frontend && npm run build --prod && rm -f ../../public/*.js RR rm -f ../../public/*.css && cp dist/index.html ../views/index.html && cp -r dist/* ../../public/"
+    },
+    "devDependencies": {
+        "axios": "^0.21.1",
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.4.1",
+        "laravel-mix": "^6.0.12",
+        "lodash": "^4.17.15",
+        "popper.js": "^1.12",
+        "vue": "^2.5.7",
+        "postcss": "^8.2.8"
+    },
+    "dependencies": {
+        "concurrently": "^4.1.2"
+    }
 }
