--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.4 | ^8.0",
+        "php": "8.0",
         "bensampo/laravel-enum": "^3.3",
         "doctrine/dbal": "^3.0",
         "fideloper/proxy": "^4.4",
