--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -10,16 +10,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@websanova/vue-auth": "^3.1.2-beta",
+    "@websanova/vue-auth": "^3.3",
     "axios": "^0.21.1",
-    "chart.js": "^2.7.3",
+    "chart.js": "^2.9.4",
     "chartist": "^0.11.4",
     "core-js": "^3.6.5",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-vuetify": "^1.0.0-beta.6",
     "flush-promises": "^1.0.2",
     "js-file-download": "^0.4.11",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "moment": "^2.24.0",
     "sass": "^1.23.1",
     "vue": "^2.6.10",
